made nav tab fixed to bottom so i doesnt scroll

--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "scheme": "jmac-cleaning-services",
     "web": {
+      "favicon":"./assets/images/online-logo.png",
     "bundler": "metro"
   },
     "plugins": [
